Thursday, March 7, 2002		Ron Steinke <rsteinke@w-link.net>

	* Fixed error in configure check for sstream vs. strstream

Wednesday, March 6, 2002	Ron Steinke <rsteinke@w-link.net>

	* Merged in Grimicus' patch to add wfmath-config

Wednesday, March 6, 2002	Ron Steinke <rsteinke@w-link.net>

	* Redid sstream vs. strstream compatibility code

Wednesday, March 6, 2002	Ron Steinke <rsteinke@w-link.net>

	* Got rid of stupid "set fail bit" on parse errors for
	  operator>>(), it now throws instead
	* Added configure check for sstream vs. strstream,
	  compatibility code

Monday, March 04, 2002	Al Riddoch <alriddoch@zepler.org>

	* wfmath/error.h: Added destructor with throw(); to exception class.

	* wfmath/polygon.h: Removed trailing comma from enumeration.

	* wfmath/polygon.h, wfmath/stream.h: Fixed std:: namespace issues,
	  and made typenames explicit.

Wednesday, February 27, 2002	Ron Steinke <rsteinke@w-link.net>

	* Commented out horribly broken intersection functions
	  with AxisBox and RotBox in polygon_intersect.h

Wednesday, February 27, 2002	Ron Steinke <rsteinke@w-link.net>

	* Autogen.sh cleanups

Tuesday, February 26, 2002	Ron Steinke <rsteinke@w-link.net>

	* Bump version number to 0.2.5, so we can have an official
	  version needed by the stage patches.

Monday, February 25, 2002	Ron Steinke <rsteinke@w-link.net>

	* Added rotation() functions to RotMatrix<3> and Quaternion
	  which take a single Vector<3> as argument (as opposed to
	  a vector for the rotation axis and an angle), and determine
	  the rotation angle from the length of the vector. This
	  is nice for things like the rotation generated by
	  (angular velocity) * dT, since it handles the zero-length
	  axis case cleanly, and avoids an extra call to sqrt().
	* Fixed an error in atlasconv.h, where specializations
	  of AxisBox<>::fromAtlas() to particular dimensions
	  weren't marked as inline

Friday, February 22, 2002	Ron Steinke <rsteinke@w-link.net>
